--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -23,7 +23,7 @@
         <footer class="h-16 bg-gray-800">
             <div class="h-full flex items-center px-6">
                 <div class="w-full h-1 bg-gray-700 rounded-full overflow-hidden">
-                    <div class="h-full bg-yellow-500 ease-in transition" style="width: 0%;" id="progressBar"></div>
+                    <div class="h-full bg-blue-500 ease-in transition" style="width: 0%;" id="progressBar"></div>
                 </div>
             </div>
         </footer>
