--- a/src/views/addSong.hbs
+++ b/src/views/addSong.hbs
@@ -15,42 +15,41 @@
         </header>
         <main class="flex-1 flex flex-col justify-center items-center">
             <div class="text-center">
-                <form class="w-full max-w-lg" id="addSong" method="POST">
+                <form class="w-full max-w-lg" action="add-song" id="addSong" method="POST">
                     <div class="flex flex-wrap -mx-3 mb-6">
                         <div class="w-full px-3">
                             <label class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2"
-                                for="song-title">
+                                for="songTitle">
                                 Song Title
                             </label>
                             <input
                                 class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                                id="song-title" placeholder="Bohemian Rhapsody" type="text" />
+                                id="songTitle" placeholder="Bohemian Rhapsody" type="text" />
                         </div>
                         <div class="w-full px-3">
                             <label class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2"
-                                for="song-artist">
+                                for="songArtist">
                                 Artist
                             </label>
                             <input
                                 class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                                id="song-artist" placeholder="Queen" type="text" />
+                                id="songArtist" placeholder="Queen" type="text" />
                         </div>
                         <div class="w-full px-3">
                             <label class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2"
-                                for="song-lyrics">
+                                for="songLyrics">
                                 Lyrics
                             </label>
                             <textarea
                                 class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                                id="song-lyrics"
+                                id="songLyrics"
                                 placeholder="Is this the real life? Is this just fantasy? Caught in a landslide..."
                                 rows="8"></textarea>
                         </div>
                         <div class="w-full px-3">
                             <button
                                 class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                                type="button"
-                                onclick="submitForm()">
+                                type="submit">
                                 Add Song
                             </button>
                         </div>
