--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -79,8 +79,8 @@
             </footer>
         </div>
     </div>
-    <script src="./js/obtain-song.js"></script>
-    <script src="./js/find-song.js"></script>
+    <script src="./js/load.js"></script>
+    <script src="./js/delivery-search.js"></script>
 </body>
 
 </html>
